--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button data-tag="XR">XR</button>
     <button data-tag="Dev">Développement</button>
     <button data-tag="musique">Musique</button>
+    <button data-tag="musique">Private Security Bodyguard</button>
     <button data-tag="all">Tout afficher</button>
   </div>
 
